--- a/proposal/__latexindent_temp.tex
+++ b/proposal/__latexindent_temp.tex
@@ -133,7 +133,7 @@
 %% article.
 \begin{abstract}
   A project proposal for the course `Parallel Programming Fall 2021'.
-  We decided to explore the parallelization of MCTS using the techniques and knowledge we have learned in this course.
+  We decide to explore the parallelization of MCTS.
 \end{abstract}
 
 %%
@@ -165,21 +165,31 @@
 \maketitle
 
 \section{Introduction}
-One of the most famous applications of MCTS is AlphaGO. It uses Monte Carlo tree search with 2 other neural networks to play Go. An early version of AlphaGo was tested on hardware with various numbers of CPUs and GPUs, running in asynchronous or distributed mode. It was tested with search threads from 12 to 64, number of CPUs from 48 to 1920, and number of GPUs from 1 to 280. And in 2016, it changed to use TPUs (tensor processing units) as its computing unit. In recent years, it keeps beating many go players. Overall, MCTS is an algorithm that can be highly parallelized. Hence, we decided to use MCTS as the topic of our final project.
+One of the most famous applications of MCTS is AlphaGO. 
+It uses Monte Carlo tree search with 2 other neural networks to play Go. An early version of AlphaGo was tested on hardware with various numbers of CPUs and GPUs, running in asynchronous or distributed mode. It was tested with search threads from 12 to 64, number of CPU from 48 to 1920, and number of GPU from 1 to 280. And in 2016, it changed to use TPU(tensor processing units) as its computing unit. In recent years, it keeps beating many go players. Overall, MCTS is an algorithm that can be highly parallelized. Hence, we decided to use MCTS as the topic of our final project.
 
-\section{Statement of problem}
 
-\section{Proposed approaches}
 
-\section{Language selection}
 
-\section{Related work}
+\section{Citations and Bibliographies}
 
-A pretty detailed work\cite{liu2020effective}.
+The use of \BibTeX\ for the preparation and formatting of one's
+references is strongly recommended. Authors' names should be complete
+--- use full first names (``Donald E. Knuth'') not initials
+(``D. E. Knuth'') --- and the salient identifying features of a
+reference should be included: title, year, volume, number, pages,
+article DOI, etc.
 
-\section{Expected results}
+The bibliography is included in your source document with these two
+commands, placed just before the \verb|\end{document}| command:
+\begin{verbatim}
+  \bibliographystyle{ACM-Reference-Format}
+  \bibliography{bibfile}
+\end{verbatim}
+where ``\verb|bibfile|'' is the name, without the ``\verb|.bib|''
+suffix, of the \BibTeX\ file.
 
-\section{Timetable}
+
 
 \section{Acknowledgments}
 
@@ -189,9 +199,53 @@ preparation of the work should be included in an acknowledgment
 section, which is placed just before the reference section in your
 document.
 
+This section has a special environment:
+\begin{verbatim}
+  \begin{acks}
+  ...
+  \end{acks}
+\end{verbatim}
+so that the information contained therein can be more easily collected
+during the article metadata extraction phase, and to ensure
+consistency in the spelling of the section heading.
 
+Authors should not prepare this section as a numbered or unnumbered {\verb|\section|}; please use the ``{\verb|acks|}'' environment.
 
 \section{Appendices}
+
+If your work needs an appendix, add it before the
+``\verb|\end{document}|'' command at the conclusion of your source
+document.
+
+Start the appendix with the ``\verb|appendix|'' command:
+\begin{verbatim}
+  \appendix
+\end{verbatim}
+and note that in the appendix, sections are lettered, not
+numbered. This document has two appendices, demonstrating the section
+and subsection identification method.
+
+\section{SIGCHI Extended Abstracts}
+
+The ``\verb|sigchi-a|'' template style (available only in \LaTeX\ and
+not in Word) produces a landscape-orientation formatted article, with
+a wide left margin. Three environments are available for use with the
+``\verb|sigchi-a|'' template style, and produce formatted output in
+the margin:
+\begin{itemize}
+  \item {\verb|sidebar|}:  Place formatted text in the margin.
+  \item {\verb|marginfigure|}: Place a figure in the margin.
+  \item {\verb|margintable|}: Place a table in the margin.
+\end{itemize}
+
+%%
+%% The acknowledgments section is defined using the "acks" environment
+%% (and NOT an unnumbered section). This ensures the proper
+%% identification of the section in the article metadata, and the
+%% consistent spelling of the heading.
+\begin{acks}
+  To Robert, for the bagels and explaining CMYK and color spaces.
+\end{acks}
 
 %%
 %% The next two lines define the bibliography style to be used, and
