1. added more references

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -126,14 +126,14 @@
 %% other information printed in the page headers. This command allows
 %% the author to define a more concise list
 %% of authors' names for this purpose.
-\renewcommand{\shortauthors}{Trovato and Tobin, et al.}
+% \renewcommand{\shortauthors}{Trovato and Tobin, et al.}
 
 %%
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
   A project proposal for the course `Parallel Programming Fall 2021'.
-  We decided to explore the parallelization of MCTS using the techniques and knowledge we have learned in this course.
+  We decided to explore the parallelization of MCTS using the techniques and knowledge we have learned in this course. We will use quantitative benchmarks to compare different approaches to solve this kind of parallelization. 
 \end{abstract}
 
 %%
@@ -175,7 +175,7 @@ One of the most famous applications of MCTS is AlphaGO. It uses Monte Carlo tree
 
 \section{Related work}
 
-A pretty detailed work\cite{liu2020effective}.
+A pretty detailed work~\cite{liu2020effective}. Different methods for enhancing the capability of MCTS on board games were explored in~\cite{weigel2017monte}. It also outlined some of the parallelization techniques for MCTS.
 
 \section{Expected results}
 
