--- a/proposal/reference.bib
+++ b/proposal/reference.bib
@@ -8,3 +8,12 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+@misc{weigel2017monte,
+      title={Monte Carlo methods for massively parallel computers}, 
+      author={Martin Weigel},
+      year={2017},
+      eprint={1709.04394},
+      archivePrefix={arXiv},
+      primaryClass={physics.comp-ph}
+}
