1. fix url not overflowing properly

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -84,6 +84,7 @@
 \usepackage{xeCJK}
 \setCJKmainfont{[NotoSansTC-Regular.otf]}
 \usepackage{hyperref}
+\usepackage{xurl}
 
 
 %%
@@ -170,7 +171,8 @@ One of our teammates had taken the course AI capstone, and during that course he
 \section{Proposed approaches}
 
 \section{Language selection}
-We will use C++ as our main programming language, together with Pthreads and CUDA.
+We will use C++ as our main programming language, together with Pthreads and CUDA. Since we want to compare the performance of CPU and GPU on parallel programs.
+
 
 \section{Related work}
 
